--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
+.background {
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    z-index: 0;
+
+}
+
 hr {
     width: 200px;
     border: 3px solid #999;
@@ -22,3 +36,18 @@ section {
     padding-top: 6rem;
 }
 
+#motto {
+    font-size: 18px;
+    font-style: italic;
+}
+.lead {
+    font-size: 24px;
+}
+
+.card-text {
+    text-align: justify;
+}
+
+.sum {
+    text-align: justify;
+}
